--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/websockets": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -37,6 +39,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
